kubernetes/aws/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: food-delivery
  labels:
    name: food-delivery
